\name{NEWS}
\title{NEWS file for the Pmetrics package}

\section{Changes in version 1.9.1}{

\subsection{NEW FEATURES}{
\itemize{
\item Now the local version number is compared with the version number in github after suggest to update Pmetrics.
\item Updated plot.PMvalid with error checking for icen and outEq.
\item PMupdate is deprecated.
}
}
\subsection{BUG FIXES}{
\itemize{
\item Fix makeValid and plot.PMvalid to handle multiple outEq. 
\item Depecrated functions were exported.
}
}
}

\section{Changes in version 1.9}{

\subsection{NEW FEATURES}{
\itemize{
\item This version is a pre-release beta for version 2.0
\item makeValid and plot.PMvalid added to replace makeNPDE and add pcVPC capacity
\item NPDE code folded into Pmetrics since original NPDE package no longer maintained
\item Windows users will now see terminal window open automatically
\item Added remote server run capabilities, currently only on LAPKB server
\item Restructured start up and installation to be self contained for all modules, including gfortran
\item Cleaned printing of summary.PMfinal object
\item Upated package NAMESPACE
}
}
\subsection{BUG FIXES}{
\itemize{
\item None
}
}
}

\section{Changes in version 1.5.3}{

\subsection{NEW FEATURES}{
\itemize{
\item MMopt now has multi-weighting option for any combo of auc, max, min
\item makeValid and plot.PMvalid added to replace makeNPDE and add pcVPC capacity
\item Updated makePTA to accept PMpost and PMmatrix objects
\item PMtree now checks for existing project and aborts if found to prevent overwriting.
}
}
\subsection{BUG FIXES}{
\itemize{
\item Fixed minor bug in npc to make calculated percentage between 5th and 95th percentile correct
}
}
}

\section{Changes in version 1.5.2}{

\subsection{NEW FEATURES}{
\itemize{
\item Updated for R version 3.5
}
}
\subsection{BUG FIXES}{
\itemize{
\item None
}
}
}

\section{Changes in version 1.5.1}{

\subsection{NEW FEATURES}{
\itemize{